# document-parser-system

./: README.md  README_phase1.md  README_phase2.md  README_phase3.md  docker-compose.dev.yml  package-lock.json  package.json  project_structure.md  roadmap.md
.github/workflows/: ci.yml
frontend/: Dockerfile.dev  package-lock.json  package.json  svelte.config.js  vite.config.js
frontend/src/: App.svelte  App_backup.svelte  app.d.ts  app.html  global.css
frontend/src/routes/: +layout.svelte  +page.svelte
rust-api/: Cargo.toml  Dockerfile
rust-api/src/: main.rs
rust-api/src/handlers/: download.rs  health.rs  job.rs  mod.rs  static_files.rs  upload.rs
rust-api/src/models/: document.rs  job.rs  mod.rs
rust-api/src/services/: job_queue.rs  mod.rs  parser.rs  worker.rs
