[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-multipart = "0.6"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
redis = { version = "0.24", features = ["aio", "tokio-comp"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
base64 = "0.21"
